2011-03-18  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: chromium: cleanup Web Inspector expectations.
        https://bugs.webkit.org/show_bug.cgi?id=56635

        Many Inspector tests are passing now but they still have expectations.
        I've removed unnecessary expectations and grouped the remainings.

        * platform/chromium/test_expectations.txt:

2011-03-18  Adam Roben  <aroben@apple.com>

        Add Windows WebKit2 expected failure results for a media test

        The failure is tracked by <http://webkit.org/b/56636>.

        * platform/win-wk2/media/controls-without-preload-expected.txt: Added.

2011-03-18  Adam Roben  <aroben@apple.com>

        Skip some timing out tests in WebKit2 on Windows

        Tracked by <http://webkit.org/b/56633> and <http://webkit.org/b/56634>.

        * platform/win-wk2/Skipped: Added inspector/console/command-line-api.html and
        http/tests/xmlhttprequest/cross-origin-authorization.html.

2011-03-18  Adam Roben  <aroben@apple.com>

        Add expected failure results for WebKit2 tests failing on Windows due to font differences

        <http://webkit.org/b/56617> tracks the failures.

        * platform/win-wk2/css2.1/t0905-c5525-flthw-00-c-g-expected.txt: Added.
        * platform/win-wk2/css2.1/t0905-c5526-flthw-00-c-g-expected.txt: Added.
        * platform/win-wk2/svg/W3C-I18N/text-dirLTR-ubOverride-expected.txt: Added.
        * platform/win-wk2/svg/W3C-I18N/tspan-dirLTR-ubOverride-in-default-context-expected.txt: Added.
        * platform/win-wk2/svg/W3C-I18N/tspan-dirLTR-ubOverride-in-ltr-context-expected.txt: Added.
        * platform/win-wk2/svg/W3C-I18N/tspan-dirNone-ubOverride-in-default-context-expected.txt: Added.
        * platform/win-wk2/svg/W3C-I18N/tspan-dirNone-ubOverride-in-ltr-context-expected.txt: Added.
        * platform/win-wk2/svg/text/bidi-text-query-expected.txt: Added.

2011-03-18  Adam Roben  <aroben@apple.com>
